# manta

./: .dockerignore  .gitignore  .gitlab-ci.yml  404.html  API.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI.md  Cargo.lock.BK  Cargo.toml  Dockerfile  GUIDE.md  MIGRATING.md  README.md  SECURITY.md  _build.rs  apply_sat_file_test.rs  build.rs  cli.toml.example  cliff.toml  config  config.toml  dist-workspace.toml  index.html  log4rs.yml  mkdocs.yml  payload.json  rust-toolchain.toml  server.toml.example  shasta.kube.config  sitemap.xml
crates/manta-cli/: Cargo.toml  Dockerfile  build.rs  openapi.json
crates/manta-cli/autocomplete_shell_scripts/: _manta  _manta-cli  manta-cli.bash  manta-cli.elv  manta-cli.fish  manta.bash  manta.elv  manta.fish
crates/manta-cli/man/: manta-add-boot-parameters.1  manta-add-group.1  manta-add-hardware.1  manta-add-kernel-parameters.1  manta-add-node.1  manta-add-nodes-to-groups.1  manta-add-nodes.1  manta-add-redfish-endpoint.1  manta-add-redfish-endpoints.1  manta-add.1  manta-apply-boot-cluster.1  manta-apply-boot-group.1  manta-apply-boot-nodes.1  manta-apply-boot-parameters.1  manta-apply-boot.1  manta-apply-configuration.1  manta-apply-ephemeral-environment.1  manta-apply-hardware-cluster.1  manta-apply-hardware-group.1  manta-apply-hardware.1  manta-apply-kernel-parameters.1  manta-apply-redfish-endpoints.1  manta-apply-sat-file.1  manta-apply-session.1  manta-apply-template.1  manta-apply.1  manta-backup-vcluster.1  manta-backup.1  manta-cli-add-boot-parameters.1  manta-cli-add-group.1  manta-cli-add-hardware.1  manta-cli-add-kernel-parameters.1  manta-cli-add-node.1  manta-cli-add-nodes-to-groups.1  manta-cli-add-redfish-endpoint.1  manta-cli-add.1  manta-cli-apply-boot-cluster.1  manta-cli-apply-boot-nodes.1  manta-cli-apply-boot.1  manta-cli-apply-configuration.1  (+144 more)
crates/manta-cli/src/: common.rs  main.rs  openapi_client.rs  process.rs
crates/manta-cli/src/backend_dispatcher/: apply_session.rs  authentication.rs  cluster_session.rs  group.rs  mod.rs  redfish_endpoint.rs
crates/manta-cli/src/cli/: build.rs  http_client.rs  mod.rs  process.rs
crates/manta-cli/src/commands/: add_boot_parameters.rs  add_hw_component_group.rs  add_kernel_parameters.rs  add_node.rs  add_nodes_to_hsm_groups.rs  add_redfish_endpoint.rs  apply_boot_group.rs  apply_hw_group.rs  delete_boot_parameters.rs  delete_group.rs  delete_images.rs  delete_node.rs  delete_redfish_endpoint.rs  gen_autocomplete.rs  get_configuration.rs  get_group.rs  get_images.rs  get_nodes.rs  get_redfish_endpoints.rs  get_template.rs  mod.rs  remove_nodes_from_hsm_groups.rs  update_boot_parameters.rs  update_redfish_endpoint.rs  upgrade.rs
crates/manta-cli/src/common/: app_context.rs  authentication.rs  authorization.rs  clap_ext.rs  config.rs  confirm.rs  display.rs  hooks.rs  kafka.rs  mod.rs  multi_line.rs  read_only.rs  sat_file.rs
crates/manta-cli/src/dispatch/: gen_autocomplete.rs  gen_man.rs  log.rs  mod.rs  process.rs  upgrade.rs
crates/manta-cli/src/handlers/: add.rs  apply.rs  backup.rs  config.rs  console.rs  delete.rs  deprecated_aliases.rs  gen_autocomplete.rs  gen_man.rs  get.rs  log.rs  migrate.rs  misc.rs  mod.rs  power.rs  process.rs  restore.rs  run.rs  update.rs  upgrade.rs
crates/manta-cli/src/http_client/: auth.rs  boot_parameters.rs  client.rs  clusters.rs  configurations.rs  console.rs  ephemeral_env.rs  groups.rs  hardware.rs  hardware_clusters.rs  images.rs  kernel_parameters.rs  migrate.rs  mod.rs  nodes.rs  power.rs  query.rs  redfish_endpoints.rs  sat_file.rs  sessions.rs  streaming.rs  templates.rs  vcluster.rs  wire.rs
crates/manta-cli/src/output/: action_result.rs  analysis_configuration.rs  analysis_image.rs  boot_parameters.rs  cache.rs  config_summary.rs  configuration.rs  group.rs  hardware.rs  image.rs  kernel_parameters.rs  mod.rs  node.rs  redfish_endpoints.rs  session.rs  summary.rs  template.rs
crates/manta-cli/src/server/: integration_tests.rs  tests.rs
crates/manta-cli/src/service/: boot_parameters.rs  cluster.rs  hardware.rs  hw_cluster.rs  migrate.rs  node.rs  redfish_endpoints.rs  sat_file.rs  session.rs  template.rs
crates/manta-cli/tests/: cli_tests.rs
crates/manta-server/: Cargo.toml  Dockerfile
crates/manta-server/src/: common.rs  config.rs  dispatcher.rs  lib.rs  main.rs  manta_backend_dispatcher.rs  wire_conv.rs
crates/manta-server/src/backend_dispatcher/: apply_hardware_cluster_pin.rs  apply_hw_cluster_pin.rs  apply_session.rs  authentication.rs  boot_parameters.rs  cfs.rs  cluster_session.rs  cluster_template.rs  component.rs  component_ethernet_interface.rs  console.rs  delete_configurations.rs  delete_configurations_and_related.rs  get_images.rs  group.rs  hardware_inventory.rs  ims.rs  migrate_backup.rs  migrate_restore.rs  mod.rs  pcs.rs  redfish_endpoint.rs  sat.rs
crates/manta-server/src/common/: app_context.rs  mod.rs
crates/manta-server/src/server/: api_doc.rs  auth_middleware.rs  handlers.rs  integration_tests.rs  mod.rs  routes.rs  tests.rs
crates/manta-server/src/service/: analysis.rs  auth.rs  authorization.rs  boot_parameters.rs  cache.rs  cluster.rs  configuration.rs  console.rs  ephemeral_env.rs  group.rs  hardware.rs  hw_cluster.rs  image.rs  ims_ops.rs  infra_backend.rs  kernel_parameters.rs  migrate.rs  mod.rs  node.rs  node_details.rs  node_ops.rs  power.rs  redfish.rs  redfish_endpoints.rs  sat_file.rs  sat_groups.rs  session.rs  summary.rs  template.rs
crates/manta-server/tests/: dispatcher_coverage.rs  integration.rs  server_routes.rs
crates/manta-shared/: Cargo.toml
crates/manta-shared/src/: lib.rs  manta_backend_dispatcher.rs
crates/manta-shared/src/backend_dispatcher/: console.rs  ims.rs  migrate_backup.rs  pcs.rs
crates/manta-shared/src/common/: app_context.rs  audit.rs  authorization.rs  check_network_connectivity.rs  error.rs  jwt_ops.rs  kafka.rs  log_ops.rs  mod.rs
crates/manta-shared/src/image_session/: mod.rs
crates/manta-shared/src/shared/: auth.rs  cluster_status.rs  dto.rs  mod.rs  sat_file.rs
crates/manta-shared/src/types/: auth.rs  cluster_status.rs  (+2 more)
(+769 files in other folders)
