[workspace]
resolver = "3"
members = ["crates/manta-cli"]

# Shared package metadata. Inherited per-crate via `version.workspace = true`.
[workspace.package]
version      = "1.64.3"
edition      = "2024"
authors      = [
  "Manuel Sopena Ballesteros <msopena@cscs.ch>",
  "Miguel Gila <miguel.gila@cscs.ch>",
]
license-file = "LICENSE"
repository   = "https://github.com/eth-cscs/manta"

# Shared external dep versions. Crates opt in with
# `<crate> = { workspace = true }`. Keeping them here means the three
# workspace members can't drift apart on tokio/serde/reqwest/etc.
[workspace.dependencies]
manta-backend-dispatcher = { path = "../manta-backend-dispatcher" }
csm-rs                   = { path = "../csm-rs" }
ochami-rs                = { path = "../ochami-rs" }

anyhow             = { version = "1.0.44", default-features = false }
base64             = { version = "0.22", default-features = false }
chrono             = { version = "0.4.41", default-features = false }
config             = { version = "0.15.19", features = ["toml"], default-features = false }
dialoguer          = { version = "0.12.0", features = ["password"], default-features = false }
directories        = "6.0.0"
futures            = { version = "0.3.31", default-features = false }
minijinja          = { version = "2.4.0", features = ["custom_syntax"] }
rdkafka            = "0.39"
regex              = "1.6.0"
reqwest            = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls", "socks", "stream"] }
serde              = { version = "1.0.219", features = ["derive"] }
serde_json         = "1.0.140"
serde_yaml         = "0.9.34"
strum              = { version = "0.27.1", default-features = false }
strum_macros       = "0.27.1"
tokio              = { version = "1.45", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "io-std", "net", "time"] }
tokio-tungstenite  = "0.29"
tokio-util         = "0.7.4"
toml               = "0.8.16"
toml_edit          = "0.22.27"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa             = { version = "5.5", features = ["axum_extras", "uuid"] }
uuid               = { version = "1.16.0", features = ["fast-rng", "v4"] }

[profile.release]
opt-level = "s"
debug     = 1

[profile.dist]
inherits = "release"
lto      = "thin"
