[workspace]
resolver = "3"
members = ["crates/manta-shared", "crates/manta-cli", "crates/manta-server"]

# Shared package metadata. Inherited per-crate via `version.workspace = true`.
[workspace.package]
version      = "2.0.0-beta.16"
edition      = "2024"
authors      = [
  "Manuel Sopena Ballesteros <msopena@cscs.ch>",
  "Miguel Gila <miguel.gila@cscs.ch>",
]
# `license-file` is set per-crate (NOT inherited) so cargo doesn't
# stamp the published manifest with `../../LICENSE` — a back-walking
# path that cargo-publish warns about and cargo-dist fails to copy
# from in CI. Each crate has its own LICENSE next to its Cargo.toml.
repository   = "https://github.com/eth-cscs/manta"

# Shared external dep versions. Crates opt in with
# `<crate> = { workspace = true }`. Keeping them here means the three
# workspace members can't drift apart on tokio/serde/reqwest/etc.
[workspace.dependencies]
# Internal workspace crate. `path` lets local builds use the in-tree
# copy (always at the workspace version); `version` is what cargo
# stamps into the published manta-cli manifest so downstream installs
# resolve from crates.io. The `=` pin is because manta-shared and
# manta-cli move together — they're not independently semver-
# compatible. Bump this in lockstep with the workspace version on
# every release.
manta-shared             = { path = "crates/manta-shared", version = "=2.0.0-beta.16" }
# Sibling repos — registry-only (no `path = "../..."`) so CI runners
# and fresh-clone contributors that don't have the adjacent sibling
# checkouts can still resolve them. cargo's `path` attribute is
# "always use the path", not "use path if present, fall back to
# registry", so the path form broke `cargo metadata` in any
# environment without the sibling layout.
#
# For inner-loop dev against unreleased sibling-repo commits, add a
# per-user `.cargo/config.toml` (gitignored) with a `[patch.crates-io]`
# block:
#
#   [patch.crates-io]
  # manta-backend-dispatcher = { path = "../manta-backend-dispatcher" }
  # csm-rs                   = { path = "../csm-rs" }
  # ochami-rs                = { path = "../ochami-rs" }
manta-backend-dispatcher = "1.0.0-beta.2"
csm-rs                   = "1.0.0-beta.3"
ochami-rs                = "1.0.0-beta.2"

anyhow             = { version = "1.0.44", default-features = false }
base64             = { version = "0.22", default-features = false }
chrono             = { version = "0.4.41", default-features = false }
config             = { version = "0.15.19", features = ["toml"], default-features = false }
dialoguer          = { version = "0.12.0", features = ["password"], default-features = false }
directories        = "6.0.0"
futures            = { version = "0.3.31", default-features = false }
minijinja          = { version = "2.4.0", features = ["custom_syntax"] }
rdkafka            = "0.39"
regex              = "1.6.0"
reqwest            = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls", "socks", "stream"] }
serde              = { version = "1.0.219", features = ["derive"] }
serde_json         = "1.0.140"
serde_yaml         = "0.9.34"
strum              = { version = "0.27.1", default-features = false }
strum_macros       = "0.27.1"
thiserror          = "2.0.12"
tokio              = { version = "1.45", features = ["rt", "rt-multi-thread", "sync", "macros", "io-util", "io-std", "net", "time"] }
tokio-tungstenite  = "0.29"
tokio-util         = "0.7.4"
toml               = "0.8.16"
toml_edit          = "0.22.27"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa             = { version = "5.5", features = ["axum_extras", "uuid"] }
uuid               = { version = "1.16.0", features = ["fast-rng", "v4"] }

[profile.release]
opt-level = "s"
debug     = 1

[profile.dist]
inherits = "release"
lto      = "thin"
