[package]
name        = "manta-server"
description = "Manta HTTP server — single API that proxies to CSM / Ochami backends."
publish     = false
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license-file           = "LICENSE"
repository.workspace   = true

[lib]
name = "manta_server"
path = "src/lib.rs"

[[bin]]
name = "manta-server"
path = "src/main.rs"

[dependencies]
# Shared crate carries wire types, common helpers, and the backend dispatcher.
manta-shared             = { workspace = true }
manta-backend-dispatcher = { workspace = true }
csm-rs                   = { workspace = true }
ochami-rs                = { workspace = true }

# HTTP server framework
axum              = { version = "0.8", default-features = false, features = ["json", "query", "tokio", "http1", "http2", "ws"] }
axum-server       = { version = "0.8", features = ["tls-rustls"] }
tower-http        = { version = "0.6", features = ["trace", "cors", "timeout"] }
tokio             = { workspace = true }
tokio-util        = { workspace = true }
futures           = { workspace = true }

# OpenAPI + Swagger UI
utoipa            = { workspace = true }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# TLS bootstrap
rustls         = { version = "0.23", default-features = false, features = ["ring"] }

# Server-side helpers used by service/* and server/common/*
base64             = { workspace = true }
chrono             = { workspace = true }
rdkafka            = { workspace = true }
comfy-table        = "7.2.2"
hostlist-parser    = "0.1.6"
regex              = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_yaml         = { workspace = true }
tracing            = { workspace = true }

# Minimal arg parsing for --port / --cert / --key / --listen-address.
clap = { version = "4.5.60", features = ["wrap_help"] }

[dev-dependencies]
tower           = { version = "0.5", features = ["util"] }
http-body-util  = "0.1"
wiremock        = "0.6"
tempfile        = "3"
toml            = "0.9"
# `test-util` adds `tokio::time::pause()` so the console-bridge tests
# can fast-forward the inactivity timer without actually sleeping.
tokio           = { workspace = true, features = ["test-util"] }

# Suppress cargo-release's per-crate git tag for this crate. The shared
# workspace tag is owned by manta-cli (see its [package.metadata.release]
# block); without `tag = false` here, cargo-release would also cut a
# `manta-server-v*` tag and dist would announce a second GitHub Release
# for the same commit.
[package.metadata.release]
tag = false
