[package]
name        = "manta-shared"
description = "Shared types and pure helpers used by both manta-cli and manta-server."
publish     = true
version.workspace      = true
edition.workspace      = true
authors.workspace      = true
license-file           = "LICENSE"
repository.workspace   = true

[lib]
path = "src/lib.rs"

[dependencies]
# Backend traits and shared types (Group, NodeSummary, K8sDetails, etc.)
# plus the structured `Error` type used by helpers throughout this crate.
# csm-rs / ochami-rs are server-only: they implement the backend traits
# and are not needed by manta-cli.
manta-backend-dispatcher = { workspace = true }

serde        = { workspace = true }
serde_json   = { workspace = true }
serde_yaml   = { workspace = true }
chrono       = { workspace = true }
utoipa       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }

# common/* helpers: config loader, structured error type.
config             = { workspace = true }
directories        = { workspace = true }
toml_edit          = { workspace = true }
reqwest            = { workspace = true }
thiserror          = { workspace = true }

[dev-dependencies]
tempfile = "3"

# Tell docs.rs how to render this crate. `all-features = true` ensures
# every cfg-gated item is documented (currently a no-op — we have no
# crate features — but cheap insurance). `rustdoc-args` matches the
# RUSTDOCFLAGS used in CI so the docs.rs build fails fast on broken
# intra-doc links instead of silently shipping rotten cross-refs.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# manta-shared participates in the workspace release with the default
# cargo-release tag scheme (`manta-shared-v{{version}}`). We previously
# set `tag = false` here hoping to collapse to a single tag, but in
# practice cargo-release treats `tag = false` as "exclude this crate
# from the release pipeline entirely" — manta-shared never got
# uploaded to crates.io, and manta-cli's `=manta-shared` dep pin
# failed at publish time.
#
# Instead the manta-shared-v* tag is left alone in git history (still
# useful for `git checkout manta-shared-v...`) but the release.yml
# workflow trigger filters strictly to `v*` so only manta-cli's
# workspace tag fires dist. See .github/workflows/release.yml.
